gcc/cp/error.c
@@ -814,7 +814,9 @@ dump_decl (tree t, int flags)
       break;
 
     case SCOPE_REF:
-      pp_expression (cxx_pp, t);
+      dump_decl (TREE_OPERAND (t, 0), flags & ~TFF_DECL_SPECIFIERS);
+      pp_colon_colon (cxx_pp); 
+      dump_decl (TREE_OPERAND (t, 1), flags);
       break;
 
     case ARRAY_REF:
@@ -1733,7 +1735,9 @@ dump_expr (tree t, int flags)
       break;
 
     case SCOPE_REF:
-      pp_expression (cxx_pp, t);
+      dump_type (TREE_OPERAND (t, 0), flags);
+      pp_colon_colon (cxx_pp);
+      dump_expr (TREE_OPERAND (t, 1), flags | TFF_EXPR_IN_PARENS);
       break;
 
     case CAST_EXPR:
