gcc/cp/init.c
@@ -1368,7 +1368,7 @@ build_offset_ref (tree type, tree name, bool address_p)
   if (TREE_CODE (name) == TEMPLATE_DECL)
     return name;
 
-  if (dependent_type_p (type) || type_dependent_expression_p (name))
+  if (processing_template_decl || uses_template_parms (type))
     return build_min_nt (SCOPE_REF, type, name);
 
   if (TREE_CODE (name) == TEMPLATE_ID_EXPR)
@@ -1448,14 +1448,6 @@ build_offset_ref (tree type, tree name, bool address_p)
     {
       error ("`%D' is not a member of type `%T'", name, type);
       return error_mark_node;
-    }
-
-  if (processing_template_decl)
-    {
-      if (TREE_CODE (orig_name) == TEMPLATE_ID_EXPR)
-	return build_min (SCOPE_REF, TREE_TYPE (member), type, orig_name);
-      else
-	return build_min (SCOPE_REF, TREE_TYPE (member), type, name);
     }
 
   if (TREE_CODE (member) == TYPE_DECL)
